--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,8 @@
 <resources>
     <string name="app_name">Cálculo IMC</string>
     <string name="title_activity_result">ResultActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="text_imc">IMC</string>
+    <string name="text_input_peso">Peso (Ex.:68 kg)</string>
+    <string name="bt_text_calcular">Calcular</string>
+    <string name="text_input_altura">Altura (Ex.:1.78 m)</string>
 </resources>
